--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,12 @@ jobs:
       HUSKY: 0
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'npm'
+
       - run: npm ci
       - run: npm test
 
@@ -46,9 +48,21 @@ jobs:
       HUSKY: 0
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'npm'
+
       - run: npm ci
       - run: npm run test:cov
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage report
+          path: ./coverage/clover.xml
+
+      - uses: danhunsaker/clover-reporter-action@v0.2.17-clover
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          clover-file: ./coverage/clover.xml
