--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,10 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: coverage report
-          path: ./coverage/clover.xml
+          name: coverage-summary
+          path: coverage/*
 
       - uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          clover-file: ./coverage/clover.xml
+          clover-file: coverage/clover.xml
