--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
           path: coverage/*
 
       - uses: danhunsaker/clover-reporter-action@v0.2.17-clover
+        if: ${{ github.event_name == 'pull_request' }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           clover-file: coverage/clover.xml
