ci: use bin/lint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      - run: npm ci
-      - run: npm run lint
+      - run: bin/lint
 
   build-and-test:
     runs-on: ubuntu-latest
