--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "immer": "^9.0.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tracked": "^1.7.10",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
