--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/coverage-c8": "^0.24.1",
+    "@vitest/coverage-istanbul": "^0.24.1",
     "@vitest/ui": "^0.24.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
