--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
     "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
