--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@emotion/babel-plugin": "^11.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
