--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
     "immer": "^9.0.15",
+    "named-urls": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-tracked": "^1.7.10",
     "zustand": "^4.1.2"
   },
