--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "axios": "^1.1.3",
     "immer": "^9.0.15",
     "named-urls": "^2.0.1",
     "react": "^18.2.0",
@@ -49,6 +50,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/coverage-istanbul": "^0.24.1",
     "@vitest/ui": "^0.24.1",
+    "axios-mock-adapter": "^1.21.2",
     "babel-loader": "^8.2.5",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -59,11 +61,15 @@
     "husky": "^8.0.0",
     "jsdom": "^20.0.1",
     "lint-staged": "^13.0.3",
+    "msw": "^0.47.4",
     "prettier": "^2.7.1",
     "storybook-dark-mode": "^1.1.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-tsconfig-paths": "^3.5.1",
     "vitest": "^0.24.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
