--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-tsconfig-paths": "^3.5.1",
-    "vitest": "^0.24.1"
+    "vitest": "^0.24.1",
+    "vitest-github-actions-reporter": "^0.8.3"
   },
   "msw": {
     "workerDirectory": "public"
