--- a/.env.e2e
+++ b/.env.e2e
@@ -1,5 +1,6 @@
+PORT=4444
 NODE_ENV=development
 VITE_DEFAULT_USER_EMAIL=
 VITE_DEFAULT_USER_PASSWORD=
-ENABLE_REDUX_DEVTOOLS=
-ENABLE_MOCK_SERVER=
+VITE_ENABLE_REDUX_DEVTOOLS=false
+VITE_ENABLE_MOCK_SERVER=true
