--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:cov": "vitest run --coverage",
+    "test:e2e": "npx playwright test",
+    "test:e2e-report": "npx playwright show-report",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -33,6 +35,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@emotion/babel-plugin": "^11.10.2",
+    "@playwright/test": "^1.27.1",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -51,6 +54,7 @@
     "@vitest/coverage-istanbul": "^0.24.1",
     "@vitest/ui": "^0.24.1",
     "babel-loader": "^8.2.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
