--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-typescript-example-2022",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,7 +12,7 @@
     "test:watch": "vitest watch",
     "test:cov": "vitest run --coverage",
     "test:e2e": "npx playwright test",
-    "test:e2e-report": "npx playwright show-report",
+    "test:e2e-report": "npx playwright show-report e2e/reports",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -65,6 +64,7 @@
     "jsdom": "^20.0.1",
     "lint-staged": "^13.0.3",
     "msw": "^0.47.4",
+    "playwright-msw": "^1.0.2",
     "prettier": "^2.7.1",
     "storybook-dark-mode": "^1.1.2",
     "typescript": "^4.6.4",
