--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
           name: coverage-summary
           path: coverage/*
 
+      # @TODO(shawk): replace this with something better
       - uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         if: ${{ github.event_name == 'pull_request' }}
         with:
