--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "@tanstack/react-query": "^4.12.0",
     "axios": "^1.1.3",
     "immer": "^9.0.15",
     "named-urls": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-tracked": "^1.7.10",
     "zustand": "^4.1.2"
