--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,9 @@ jobs:
     env:
       HUSKY: 0
       NODE_ENV: test
+    container:
+      image: mcr.microsoft.com/playwright:v1.27.0-focal
+      options: --user 1001 # https://github.com/cypress-io/github-action/issues/446
     steps:
       - uses: actions/checkout@v3
 
@@ -86,33 +89,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # https://github.com/microsoft/playwright/issues/7249
-      - name: Get installed Playwright version
-        id: playwright-version
-        run: echo "version=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//' | head -n 1)" >> $GITHUB_OUTPUT
-
-      - uses: actions/cache@v3
-        id: playwright-cache
-        with:
-          path: '~/.cache/ms-playwright'
-          key: '${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.version }}'
-          restore-keys: |
-            ${{ runner.os }}-playwright-
-
-      - name: Install Playwright browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps
-
-      - name: Install Playwright system dependencies
-        run: npx playwright install-deps
-        if: steps.playwright-cache.outputs.cache-hit == 'true'
-
       - name: Run Playwright tests
-        run: npm run test:e2e
+        run: npx playwright test
 
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: playwright-report
-          path: e2e/reports/
+          path: e2e/results/
           retention-days: 30
