--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,3 +98,18 @@ jobs:
           name: playwright-report
           path: e2e/results/
           retention-days: 30
+
+  lighthouse:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for Netlify Preview
+        uses: kamranayub/wait-for-netlify-action@v2.1.0
+        id: wait-for-netflify-preview
+        with:
+          site_name: "react-ts-reference-2022"
+        env:
+          NETLIFY_TOKEN: ${{secrets.NETLIFY_TOKEN}}
+      - name: Lighthouse
+        uses: foo-software/lighthouse-check-action@master
+        with:
+          urls: '${{ steps.wait-for-netflify-preview.outputs.url }},${{ steps.wait-for-netflify-preview.outputs.url }}/login'
