--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
 
   lighthouse:
     runs-on: ubuntu-latest
+    environment: CI
     steps:
       - name: Wait for Netlify Preview
         uses: kamranayub/wait-for-netlify-action@v2.1.0
