--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,16 +112,18 @@ jobs:
         with:
           site_name: "react-ts-reference-2022"
         env:
-          NETLIFY_TOKEN: ${{secrets.NETLIFY_TOKEN}}
+          NETLIFY_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
 
       - name: Lighthouse
         uses: foo-software/lighthouse-check-action@master
         with:
           outputDirectory: ${{ github.workspace }}/tmp/artifacts
+          slackWebhookUrl: ${{ secrets.LIGHTHOUSE_SLACK_WEBHOOK_URL }}
+          prCommentEnabled: true
+          gitHubAccessToken: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
           sha: ${{ github.sha }}
-          slackWebhookUrl: ${{ secrets.LIGHTHOUSE_SLACK_WEBHOOK_URL }}
-          urls: '${{ steps.wait-for-netflify-preview.outputs.url }},${{ steps.wait-for-netflify-preview.outputs.url }}/login'
+          urls: '${{ steps.wait-for-netflify-preview.outputs.url }}'
 
       - name: Upload lighthouseartifacts
         uses: actions/upload-artifact@master
