--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "storybook-dark-mode": "^1.1.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.2",
     "vite-tsconfig-paths": "^3.5.1",
     "vitest": "^0.24.1",
     "vitest-github-actions-reporter": "^0.8.3"
